<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Consulta CEP Permissões</string>
    <string name="app_title">Consulta CEP</string>
    <string name="app_subtitle">Consulte um endereço pela API pública ViaCEP e teste uma permissão Android de localização.</string>
    <string name="cep_hint">Exemplo: 01001000</string>
    <string name="consultar_cep">Consultar CEP</string>
    <string name="resultado_titulo">Resultado encontrado</string>
    <string name="resultado_cep">CEP: %1$s</string>
    <string name="resultado_logradouro">Logradouro: %1$s</string>
    <string name="resultado_bairro">Bairro: %1$s</string>
    <string name="resultado_cidade">Cidade/UF: %1$s - %2$s</string>
    <string name="resultado_ddd">DDD: %1$s</string>
    <string name="permissao_titulo">Permissão Android</string>
    <string name="permissao_descricao">Use sua localização para registrar sua posição durante a consulta. O Android pode oferecer localização aproximada ou precisa, e a consulta de CEP continua funcionando se você negar.</string>
    <string name="usar_localizacao">Usar minha localização</string>
    <string name="permissao_feedback_inicial">Toque no botão para testar as permissões ACCESS_FINE_LOCATION e ACCESS_COARSE_LOCATION.</string>
</resources>
